# Dataset_PMC

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile copy  Dockerfile_debug  README.md  pyproject.toml  requirements.txt  setup.sh  setup1.sh
jsonl_files/: .gitattributes  PMC000xxxxxx.jsonl
output/: output_example.csv
output/PMC001xxxxxx/csv/: first100_20240324_180306.csv  first100_20240324_181742.csv  first10_20240331_140311.csv
output/PMC001xxxxxx/parquet/: first100_20240324_181618.parquet  first10_20240331_140950.parquet
script/: Makefile  deduplicate  deduplicate.cpp  deduplicate.py  execClustering.py  uploadHuggingface.py
src/: batch_process.py  blob_operations.py  clustering.py  config.py  data_analysis.py  data_handler.py  huggingface.py  input.txt  main.py  pipeline.py  pipeline_dataflow.py  pipeline_dedup.py  pipeline_setup.py  pipeline_test.py  resource_access.py  run_dedup.py  sentence_analysis.py  test.py  text_extraction.py  utils.py  xml_processing.py
src/dedup/: deduplicate  deduplicate.cpp
