[tool.poetry]
name = "dataset-pmc"
version = "0.1.0"
description = ""
authors = ["k3ntar0 <k3ntar01wata@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
nmslib = "^2.1.1"
scispacy = "^0.5.4"
spacy = "^3.7.4"
pandas = "1.5.3"
streamlit = "1.5.1"
en-core-sci-lg = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_lg-0.5.4.tar.gz"}
protobuf = "3.20"
pyarrow = "^15.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
